--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -5,22 +5,17 @@
 <html>
     <head>
         <title>Rango</title>
-        <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-        <script src="{% static 'js/jquery.js' %}"></script>
     </head>
     <body>
-        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-
-        <h1>Rango says hey there partner!</h1>
+        <h1>Rango says ...</h1>
         <div>
             hey there partner! <br />
             <strong>{{ boldmessage }}</strong><br />
         </div>
 
         <div>
-            <a href="{% url 'rango:about' %}">About</a><br />
-            <a href="{% url 'rango:index' %}">Back to the index</a>
-
+            <a href="/rango/about/">About</a><br />
+            <img src = "{% static 'images/rango.jpg' %}" alt = "Picture of Rango"/>
         </div>
     </body>
 </html>
