--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,35 +1,36 @@
- <!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load static %}
 
- <html>
+{% block title_block %}
+    {% if category %}
+        {{ category.name }}
+    {% else %}
+        Unknown Category
+    {% endif %}
+{% endblock %}
 
-   <head>
-       <title>Rango</title>
-   </head>
+{% block body_block %}
+<div>
+    {% if category %}
+        <h1>{{ category.name }}</h1>
 
-   <body>
-       <div>
-          {% if category %}
-              <h1>{{ category.name }}</h1>
-              {% if pages %}
-              <ul>
-                  {% for page in pages %}
-                  <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                  {% endfor %}
-              </ul>
-              {% else %}
-              <strong>No pages currently in category.</strong>
-              {% endif %}
-          {% else %}
-              The specified category does not exist.
-          {% endif %}
-            {% if category %}
-                <a href="{% url 'rango:add_page' category.slug %}">Add Page</a><br/>
-            {% else %}
-                The specified category does not exist.
-            {% endif %}
-      </div>
-      <div>
-        <p><a href="/rango/">Index</a></p>
-      </div>
-  </body>
- </html>
+        {% if pages %}
+            <ul>
+                {% for page in pages %}
+                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>No pages currently in category.</strong>
+        {% endif %}
+
+        <a href="{% url 'rango:add_page' category.slug %}">Add Page</a><br/>
+    {% else %}
+        The specified category does not exist.
+    {% endif %}
+</div>
+
+<div>
+    <p><a href="{% url 'rango:index' %}">Index</a></p>
+</div>
+{% endblock %}
