--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -8,6 +8,12 @@ Homepage
 {% block body_block %}
 <h1>Welcome to Rango!</h1>
 
+{% if user.is_authenticated %}
+    <h1>howdy {{ user.username }}!</h1>
+{% else %}
+    <h1>hey there partner!</h1>
+{% endif %}
+
 {% if categories %}
     <ul>
     {% for category in categories %}
