--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -11,6 +11,7 @@ About Rango
 <div>
     Here is the about page.<br />
     This tutorial has been put together by {{ boldmessage }}
+    <p>Visits: {{ visits }}</p>
 </div>
 
 <div>
